# ezjson

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  xcode.sh
include/ezjson/: Factory.h  JDoc.h  JFactory.h  JForwardDeclare.h  JValue.h  ezjson.h
other/sublime/: ezjson.sublime-workspace
src/: Doc.cpp  Doc.h  Factory.cpp  JFactory.cpp  PreciseDecimal.cpp  PreciseDecimal.h  SharedStrings.cpp  SharedStrings.h  Throw.h  UniqueString.cpp  UniqueString.h  Value.cpp  Value.h
test/: TestFile001.cpp  TestPreciseDecimal.cpp  TestSharedStrings.cpp  TestUniqueString.cpp  TestValue.cpp  catch.h  compareWithoutWhitespace.h
test/data/: test-file-001.json
